--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ button {
 }
 
 :root {
-  --ui-font: "Open Sans", ui-sans-serif, system-ui, sans-serif;
+  --ui-font: "Open Sans", "Noto Color Emoji", ui-sans-serif, system-ui, sans-serif;
 }
 
 body {
